refactor: added patterns to name variables, db = snake_case; backend = camelCase